updated HTML and javascript code

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       -->
             <div class="banner">
 
-                <form>
-                    <input type="text" class="form-control bg-gray">
-                    <button class="btn btn-success" type="button">FIND A HORROR FILM</button>
+                <form class="SEARCHLOCATION">
+                    <input type="text" id="movie" class="form-control bg-dark">
+                    <button class="btn btn-success" id="search-btn" type="button">FIND A HORROR FILM</button>
 
 
                 </form>
@@ -153,11 +153,14 @@
             </div>
             <!-- Then another content container -->
             <div class="content">
-                <h2 class="content-title">
-                    Content title
-                    <a href="#">#</a>
+                <h2 class="content-title2">
+                    WIKI Section
+                   
                 </h2>
-                ...
+                <p id="wiki-info">
+
+                </p>
+
             </div>
 
             <div class="card">
